[package]
name = "Echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
bcrypt = "0.15.0"
diesel = {version = "2.1.1" , features = []}
diesel-async = {version = "0.3.2" , features = ["mysql" , "deadpool"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = {version = "1.0.188" , features = ["derive"]}
uuid = {version = "1.4.1" , features = ["v4"]}
